--- a/source/courses/cmps311/hw/hw2/index.html
+++ b/source/courses/cmps311/hw/hw2/index.html
@@ -1,1 +1,230 @@
-<html><head><title>Homework2</title><meta content="text/html; charset=UTF-8" http-equiv="content-type"><style type="text/css">@import url('https://themes.googleusercontent.com/fonts/css?kit=na2xy4REgy2vjVAZtpZNczHUK-U7JcNaph6ABy0_u8MibyMe4ukfvPvpfYEqkIMW');ol{margin:0;padding:0}.c1{orphans:2;widows:2;text-align:justify;direction:ltr}.c3{orphans:2;widows:2;direction:ltr;height:11pt}.c11{background-color:#ffffff;max-width:540pt;padding:36pt 36pt 36pt 36pt}.c4{orphans:2;widows:2;direction:ltr}.c10{font-style:italic}.c8{font-size:14pt}.c2{font-weight:bold}.c6{font-family:"Consolas"}.c7{text-decoration:underline}.c5{height:11pt}.c0{font-family:"Calibri"}.c9{color:#ff0000}.title{padding-top:0pt;color:#000000;font-size:21pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}.subtitle{padding-top:0pt;color:#666666;font-size:13pt;padding-bottom:10pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;font-style:italic;orphans:2;widows:2;text-align:left}li{color:#000000;font-size:11pt;font-family:"Arial"}p{margin:0;color:#000000;font-size:11pt;font-family:"Arial"}h1{padding-top:10pt;color:#000000;font-size:16pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h2{padding-top:10pt;color:#000000;font-weight:bold;font-size:13pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h3{padding-top:8pt;color:#666666;font-weight:bold;font-size:12pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h4{padding-top:8pt;color:#666666;text-decoration:underline;font-size:11pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h5{padding-top:8pt;color:#666666;font-size:11pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h6{padding-top:8pt;color:#666666;font-size:11pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;font-style:italic;orphans:2;widows:2;text-align:left}</style></head><body class="c11"><p class="c4"><span class="c2">CMPS 311 - Operating Systems</span></p><p class="c4"><span>Homework 2</span></p><p class="c3"><span></span></p><p class="c4"><span>For this program you are being asked to write code specifically targeting the POSIX environment. &nbsp;You </span><span class="c2">cannot</span><span>&nbsp;work on Windows for this assignment. &nbsp;You are also </span><span class="c2">required</span><span>&nbsp;to program in C, not C++. &nbsp;Your source code must have a</span><span class="c2">&nbsp;.c extension</span><span>, and must be compilable using </span><span class="c2">gcc</span><span>&nbsp;(not g++).</span></p><p class="c3"><span></span></p><p class="c4"><span class="c2">Part 1</span></p><p class="c1"><span>Write a program that prints the integers from 0 &ndash; 10,000 to stdout. &nbsp;Keep track of how much time your program spends executing both user and system instructions. &nbsp;Have your program print out these time values. &nbsp;In addition, have your program print out the operating system version, machine name, release level, and hardware platform it is running on (print this information </span><span class="c10">after</span><span>&nbsp;the 10,000 integers). &nbsp;</span><span class="c2">(80 points)</span></p><p class="c1"><span>&nbsp;</span></p><p class="c4"><span>For example, running the program on my machine resulted in the following output:</span></p><p class="c3"><span></span></p><p class="c4"><span class="c6">1</span></p><p class="c4"><span class="c6">2</span></p><p class="c4"><span class="c6">&hellip;</span></p><p class="c4"><span class="c6">9999</span></p><p class="c4"><span class="c6">10000</span></p><p class="c4"><span class="c6">Operating System Version: &nbsp;Darwin</span></p><p class="c4"><span class="c6">Machine Name: &nbsp;sfrees.local</span></p><p class="c4"><span class="c6">Release Level: &nbsp;11.4.2</span></p><p class="c4"><span class="c6">Version Level: &nbsp;Darwin Kernel Version 11.4.2: Thu Aug 23 16:25:48 PDT 2012; root:xnu-1699.32.7~1/RELEASE_X86_64</span></p><p class="c4"><span class="c6">Hardware Platform: &nbsp;x86_64</span></p><p class="c4"><span class="c6">User time: &nbsp;0.0073870000</span></p><p class="c4"><span class="c6">System time: &nbsp;0.0143600000</span></p><p class="c1"><span class="c0">&nbsp;</span></p><p class="c1"><span>You will be using two POSIX calls for this program:</span></p><p class="c1"><span>&nbsp;</span></p><p class="c1"><span class="c2">uname (stuct utsname * )</span><span>: &nbsp;the </span><span class="c2">uname</span><span>&nbsp;function allows you to retrieve information about the system your program is running on. &nbsp;The </span><span class="c2">uname</span><span>&nbsp;function takes one parameter - a reference to a </span><span class="c2">utsname</span><span>&nbsp;structure. &nbsp;After </span><span class="c2">uname</span><span>&nbsp;is called, this data structure will be filled in with the relevant system information. &nbsp; (You must include sys/utsname.h to use this function)</span></p><p class="c1"><span>&nbsp;</span></p><p class="c1"><span class="c2">getrusage (int who, struct rusage *)</span><span>: &nbsp;the </span><span class="c2">getrusage</span><span>&nbsp;function allows you to retrieve information regarding the running of your program. &nbsp;You must include sys/resource.h to use this function. &nbsp;The </span><span class="c2">getrusage</span><span>&nbsp;function takes two parameters:</span></p><p class="c1"><span>&nbsp;</span></p><p class="c1"><span class="c10">who: &nbsp;</span><span>integer identifying the program(s) you are trying to find information about. &nbsp;You should use </span><span class="c2">RUSAGE_SELF</span><span>&nbsp;for this program, a predefined constant telling </span><span class="c2">getrusage</span><span>&nbsp;to get information about the current/calling program only.</span></p><p class="c1"><span>&nbsp;</span></p><p class="c1"><span class="c10">rusage</span><span>: &nbsp;a reference to an </span><span class="c2">rusage</span><span>&nbsp;data structure. &nbsp;After </span><span class="c2">getrusage</span><span>&nbsp;is called the </span><span class="c2">rusage</span><span>&nbsp;data structure will be filled in. &nbsp;Along with other important information, the </span><span class="c2">rusage</span><span>&nbsp;data structure contains information about how much time your program has spent executing user and system instructions. Remember, </span><span class="c2">rusage</span><span>&nbsp;will give you the time in a </span><span class="c2">timeval</span><span>&nbsp;structure, which contain seconds </span><span class="c2">and</span><span>&nbsp;microseconds.</span></p><p class="c1"><span>&nbsp;</span></p><p class="c1"><span class="c10">**In order to complete this program you will likely need to look up additional information about these functions and data structures. &nbsp;A good place to start is the UNIX man pages (type &ldquo;man&rdquo; and the term you are looking for at the command line). &nbsp;You will also find a wealth of information about these functions on the web (i.e. try typing &ldquo;man rusage&rdquo; into Google)</span></p><p class="c4"><span class="c0">&nbsp;</span></p><p class="c1"><span class="c0">&nbsp;</span></p><p class="c1"><span class="c2 c7">Part 2</span></p><p class="c1"><span>Add a call to the sleep function [</span><span>sleep (int seconds)</span><span>] before you print out the system information. &nbsp;Make your program sleep for 5 -10 seconds. &nbsp; Run your program with and without the sleep call. &nbsp;</span><span class="c10 c2">How does sleep effect the time spent executing user and system instructions? Why don&rsquo;t the resulting times reported by rusage add up to the amount of time it took your program to complete?</span><span>&nbsp; </span></p><p class="c1 c5"><span></span></p><p class="c1 c5"><span></span></p><p class="c1"><span class="c8 c2">You need only turn in source code for Part 2 (since it is just adding to Part 1). &nbsp;Please answer Part 2&rsquo;s question about </span><span class="c8 c2 c10">why rusage is the way it is</span><span class="c8 c2">&nbsp;</span><span class="c2 c8">in a comment at the top of your program.</span></p><p class="c1"><span class="c2 c9">&nbsp;</span></p><p class="c3"><span></span></p></body></html>
+<html>
+
+<head>
+    <title>Homework 2</title>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+    <style type="text/css">
+        @import url('https://themes.googleusercontent.com/fonts/css?kit=lhDjYqiy3mZ0x6ROQEUoUw');
+
+        ol {
+            margin: 0;
+            padding: 0
+        }
+
+        .c0 {
+            orphans: 2;
+            widows: 2;
+            direction: ltr
+        }
+
+        .c5 {
+            background-color: #ffffff;
+            max-width: 540pt;
+            padding: 36pt 36pt 36pt 36pt
+        }
+
+        .c1 {
+            font-family: "Consolas"
+        }
+
+        .c3 {
+            color: #980000
+        }
+
+        .c4 {
+            font-weight: bold
+        }
+
+        .c2 {
+            height: 11pt
+        }
+
+        .c6 {
+            text-decoration: underline
+        }
+
+        .title {
+            padding-top: 0pt;
+            color: #000000;
+            font-size: 21pt;
+            padding-bottom: 0pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+
+        .subtitle {
+            padding-top: 0pt;
+            color: #666666;
+            font-size: 13pt;
+            padding-bottom: 10pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            font-style: italic;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+
+        li {
+            color: #000000;
+            font-size: 11pt;
+            font-family: "Arial"
+        }
+
+        p {
+            margin: 0;
+            color: #000000;
+            font-size: 11pt;
+            font-family: "Arial"
+        }
+
+        h1 {
+            padding-top: 10pt;
+            color: #000000;
+            font-size: 16pt;
+            padding-bottom: 0pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+
+        h2 {
+            padding-top: 10pt;
+            color: #000000;
+            font-weight: bold;
+            font-size: 13pt;
+            padding-bottom: 0pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+
+        h3 {
+            padding-top: 8pt;
+            color: #666666;
+            font-weight: bold;
+            font-size: 12pt;
+            padding-bottom: 0pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+
+        h4 {
+            padding-top: 8pt;
+            color: #666666;
+            text-decoration: underline;
+            font-size: 11pt;
+            padding-bottom: 0pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+
+        h5 {
+            padding-top: 8pt;
+            color: #666666;
+            font-size: 11pt;
+            padding-bottom: 0pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+
+        h6 {
+            padding-top: 8pt;
+            color: #666666;
+            font-size: 11pt;
+            padding-bottom: 0pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            font-style: italic;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+    </style>
+</head>
+
+<body class="c5">
+    <p class="c0"><span class="c4">CMPS 311 - Operating Systems</span></p>
+    <p class="c0 c2"><span></span></p>
+    <p class="c0"><span>Write a POSIX program (on Mac or Linux) that uses 3 processes to print the Fibonacci series to a
+            file. &nbsp;Your main process will ask the user for a single integer between 1 and 50. &nbsp;This input will
+            be the number of Fibonacci numbers the program will generate. &nbsp;After accepting the input, the main
+            process shall start two child processes that are connected via a single pipe.</span></p>
+    <p class="c0 c2"><span></span></p>
+    <p class="c0"><span class="c4">Computation Process</span><span>: &nbsp;This process will compute the first N
+            Fibonacci numbers (where N is the number the user entered). &nbsp;After generating each number, it should
+            send it along the pipe to the printing process to print it. &nbsp;Note: &nbsp;you should be able to do this
+            entire program without using an array to store the Fibonacci numbers!</span></p>
+    <p class="c0 c2"><span></span></p>
+    <p class="c0"><span class="c4">Printing Process</span><span>: &nbsp;This process first create an output file called
+            fib-N.txt, where N is the number the user originally entered. You do not need to check if the file already
+            exists - you may simply overwrite it if it does. &nbsp;It will then read a number from the pipe and simply
+            write it out to the output file. &nbsp;After all the numbers have been generated, the process should close
+            the output file and exit. &nbsp;You may use any method you like to make sure the printing process knows when
+            to stop reading.</span></p>
+    <p class="c0 c2"><span></span></p>
+    <p class="c0"><span
+            style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 496.50px; height: 191.49px;"><img
+                alt="" src="images/image00.png"
+                style="width: 496.50px; height: 191.49px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+                title=""></span></p>
+    <p class="c0"><span>After starting the two additional processes and linking them together with the pipe, your main
+            process should wait for each of its children to terminate. &nbsp;After they are done, the main process
+            should again ask the user for another integer between 1 and 50 and repeat the whole process. &nbsp;If the
+            user enters a -1, your program should quit.</span></p>
+    <p class="c0 c2"><span></span></p>
+    <p class="c0"><span class="c1">Sample Input and output: (User input in </span><span class="c1 c3">red</span><span
+            class="c1">)</span></p>
+    <p class="c0"><span class="c1">Enter an integer between 1 and 50: &nbsp;</span><span class="c1 c3">4</span></p>
+    <p class="c0"><span class="c1">First 4 fibonacci numbers were written to fib-4.txt</span></p>
+    <p class="c0"><span class="c1">Enter an integer between 1 and 50: &nbsp;</span><span class="c1 c3">5</span></p>
+    <p class="c0"><span class="c1">First 5 fibonacci numbers were written to fib-5.txt</span></p>
+    <p class="c0"><span class="c1">Enter an integer between 1 and 50: &nbsp;</span><span class="c1 c3">-1</span></p>
+    <p class="c0"><span class="c1">Goodbye.</span></p>
+    <p class="c0 c2"><span></span></p>
+    <p class="c0"><span class="c1 c6">Contents of Fib-4.txt</span><span class="c1">&nbsp; &nbsp; &nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="c1 c6">Contents of
+            Fib-5.txt</span></p>
+    <p class="c0"><span class="c1">1: &nbsp;1 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1:
+            &nbsp;1</span></p>
+    <p class="c0"><span class="c1">2: &nbsp;1 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2:
+            &nbsp;1</span></p>
+    <p class="c0"><span class="c1">3: &nbsp;2 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3:
+            &nbsp;2</span></p>
+    <p class="c0"><span class="c1">4: &nbsp;3 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4:
+            &nbsp;3</span></p>
+    <p class="c0"><span class="c1">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;5:
+            &nbsp;5</span></p>
+    <p class="c0 c2"><span></span></p>
+</body>
+
+</html>
