--- a/source/courses/cmps311/hw/hw3/index.html
+++ b/source/courses/cmps311/hw/hw3/index.html
@@ -1,1 +1,198 @@
-<html><head><title>Homework3</title><meta content="text/html; charset=UTF-8" http-equiv="content-type"><style type="text/css">@import url('https://themes.googleusercontent.com/fonts/css?kit=lhDjYqiy3mZ0x6ROQEUoUw');ol{margin:0;padding:0}.c0{orphans:2;widows:2;direction:ltr}.c5{background-color:#ffffff;max-width:540pt;padding:36pt 36pt 36pt 36pt}.c1{font-family:"Consolas"}.c3{color:#980000}.c4{font-weight:bold}.c2{height:11pt}.c6{text-decoration:underline}.title{padding-top:0pt;color:#000000;font-size:21pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}.subtitle{padding-top:0pt;color:#666666;font-size:13pt;padding-bottom:10pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;font-style:italic;orphans:2;widows:2;text-align:left}li{color:#000000;font-size:11pt;font-family:"Arial"}p{margin:0;color:#000000;font-size:11pt;font-family:"Arial"}h1{padding-top:10pt;color:#000000;font-size:16pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h2{padding-top:10pt;color:#000000;font-weight:bold;font-size:13pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h3{padding-top:8pt;color:#666666;font-weight:bold;font-size:12pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h4{padding-top:8pt;color:#666666;text-decoration:underline;font-size:11pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h5{padding-top:8pt;color:#666666;font-size:11pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h6{padding-top:8pt;color:#666666;font-size:11pt;padding-bottom:0pt;font-family:"Trebuchet MS";line-height:1.15;page-break-after:avoid;font-style:italic;orphans:2;widows:2;text-align:left}</style></head><body class="c5"><p class="c0"><span class="c4">CMPS 311 - Operating Systems</span></p><p class="c0"><span>Homework 3</span></p><p class="c0 c2"><span></span></p><p class="c0"><span>Write a POSIX program (on Mac or Linux) that uses 3 processes to print the Fibonacci series to a file. &nbsp;Your main process will ask the user for a single integer between 1 and 50. &nbsp;This input will be the number of Fibonacci numbers the program will generate. &nbsp;After accepting the input, the main process shall start two child processes that are connected via a single pipe.</span></p><p class="c0 c2"><span></span></p><p class="c0"><span class="c4">Computation Process</span><span>: &nbsp;This process will compute the first N Fibonacci numbers (where N is the number the user entered). &nbsp;After generating each number, it should send it along the pipe to the printing process to print it. &nbsp;Note: &nbsp;you should be able to do this entire program without using an array to store the Fibonacci numbers!</span></p><p class="c0 c2"><span></span></p><p class="c0"><span class="c4">Printing Process</span><span>: &nbsp;This process first create an output file called fib-N.txt, where N is the number the user originally entered. You do not need to check if the file already exists - you may simply overwrite it if it does. &nbsp;It will then read a number from the pipe and simply write it out to the output file. &nbsp;After all the numbers have been generated, the process should close the output file and exit. &nbsp;You may use any method you like to make sure the printing process knows when to stop reading.</span></p><p class="c0 c2"><span></span></p><p class="c0"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 496.50px; height: 191.49px;"><img alt="" src="images/image00.png" style="width: 496.50px; height: 191.49px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p><p class="c0"><span>After starting the two additional processes and linking them together with the pipe, your main process should wait for each of its children to terminate. &nbsp;After they are done, the main process should again ask the user for another integer between 1 and 50 and repeat the whole process. &nbsp;If the user enters a -1, your program should quit.</span></p><p class="c0 c2"><span></span></p><p class="c0"><span class="c1">Sample Input and output: (User input in </span><span class="c1 c3">red</span><span class="c1">)</span></p><p class="c0"><span class="c1">Enter an integer between 1 and 50: &nbsp;</span><span class="c1 c3">4</span></p><p class="c0"><span class="c1">First 4 fibonacci numbers were written to fib-4.txt</span></p><p class="c0"><span class="c1">Enter an integer between 1 and 50: &nbsp;</span><span class="c1 c3">5</span></p><p class="c0"><span class="c1">First 5 fibonacci numbers were written to fib-5.txt</span></p><p class="c0"><span class="c1">Enter an integer between 1 and 50: &nbsp;</span><span class="c1 c3">-1</span></p><p class="c0"><span class="c1">Goodbye.</span></p><p class="c0 c2"><span></span></p><p class="c0"><span class="c1 c6">Contents of Fib-4.txt</span><span class="c1">&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="c1 c6">Contents of Fib-5.txt</span></p><p class="c0"><span class="c1">1: &nbsp;1 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1: &nbsp;1</span></p><p class="c0"><span class="c1">2: &nbsp;1 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2: &nbsp;1</span></p><p class="c0"><span class="c1">3: &nbsp;2 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3: &nbsp;2</span></p><p class="c0"><span class="c1">4: &nbsp;3 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4: &nbsp;3</span></p><p class="c0"><span class="c1">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;5: &nbsp;5</span></p><p class="c0 c2"><span></span></p></body></html>
+<html>
+
+<head>
+    <title>Homework 3</title>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+    <style type="text/css">
+        ol {
+            margin: 0;
+            padding: 0
+        }
+
+        .c4 {
+            background-color: #ffffff;
+            max-width: 540pt;
+            padding: 36pt 36pt 36pt 36pt
+        }
+
+        .c0 {
+            orphans: 2;
+            widows: 2;
+            direction: ltr
+        }
+
+        .c1 {
+            font-weight: bold;
+            text-decoration: underline
+        }
+
+        .c2 {
+            font-weight: bold
+        }
+
+        .c3 {
+            height: 11pt
+        }
+
+        .title {
+            padding-top: 0pt;
+            color: #000000;
+            font-size: 21pt;
+            padding-bottom: 0pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+
+        .subtitle {
+            padding-top: 0pt;
+            color: #666666;
+            font-size: 13pt;
+            padding-bottom: 10pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            font-style: italic;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+
+        li {
+            color: #000000;
+            font-size: 11pt;
+            font-family: "Arial"
+        }
+
+        p {
+            margin: 0;
+            color: #000000;
+            font-size: 11pt;
+            font-family: "Arial"
+        }
+
+        h1 {
+            padding-top: 10pt;
+            color: #000000;
+            font-size: 16pt;
+            padding-bottom: 0pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+
+        h2 {
+            padding-top: 10pt;
+            color: #000000;
+            font-weight: bold;
+            font-size: 13pt;
+            padding-bottom: 0pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+
+        h3 {
+            padding-top: 8pt;
+            color: #666666;
+            font-weight: bold;
+            font-size: 12pt;
+            padding-bottom: 0pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+
+        h4 {
+            padding-top: 8pt;
+            color: #666666;
+            text-decoration: underline;
+            font-size: 11pt;
+            padding-bottom: 0pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+
+        h5 {
+            padding-top: 8pt;
+            color: #666666;
+            font-size: 11pt;
+            padding-bottom: 0pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+
+        h6 {
+            padding-top: 8pt;
+            color: #666666;
+            font-size: 11pt;
+            padding-bottom: 0pt;
+            font-family: "Trebuchet MS";
+            line-height: 1.15;
+            page-break-after: avoid;
+            font-style: italic;
+            orphans: 2;
+            widows: 2;
+            text-align: left
+        }
+    </style>
+</head>
+
+<body class="c4">
+    <p class="c0"><span class="c2">CMPS 311 - Operating Systems</span></p>
+    <p class="c0 c3"><span></span></p>
+    <p class="c0"><span>For this assignment, you will write </span><span class="c1">three separate
+            programs</span><span>&nbsp;that do the exact same thing - which is similar to Homework 3!.</span></p>
+    <p class="c0 c3"><span></span></p>
+    <p class="c0"><span class="c2">Program 1:</span><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;POSIX (using
+            the pthread library) written in </span><span class="c2">C (NOT C++).</span></p>
+    <p class="c0 c3"><span class="c2"></span></p>
+    <p class="c0"><span class="c2">Program 2:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span>Win32 (using
+            the Win32 Thread API) written in</span><span class="c2">&nbsp;C (Not C++).</span></p>
+    <p class="c0 c3"><span class="c2"></span></p>
+    <p class="c0"><span class="c2">Program 3:</span><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;C++ Threads
+            (C++ 11)</span></p>
+    <p class="c0 c3"><span></span></p>
+    <p class="c0"><span>For each of these programs, you will construct a program that repeatedly asks the user for an
+            integer (N), and prints out the first N fibonacci numbers to a file named fib-N.txt (where N is the number
+            the user typed in).</span></p>
+    <p class="c0 c3"><span></span></p>
+    <p class="c0"><span>Each time a user types a number (except -1, which will indicate the end of the program), you
+            should spawn worker a new thread (using POSIX, Win32, or C++ depending on which program you are creating)
+            and send in N as the thread parameter.</span></p>
+    <p class="c0 c3"><span></span></p>
+    <p class="c0"><span>Your &ldquo;worker&rdquo; thread should compute the N fibonacci numbers and save them to the
+            file. &nbsp;Your main thread/process should </span><span class="c2">not wait</span><span>&nbsp;for the work
+            thread to complete - theoretically allowing multiple worker threads to be active simultaneously.</span></p>
+    <p class="c0 c3"><span></span></p>
+    <p class="c0"><span class="c2">Note:</span><span>&nbsp; If you are quick enough, you could have multiple workers
+            creating the same text file if you type the same N value in twice in a row. &nbsp;This is a big problem, and
+            we&rsquo;ll figure out how to prevent this later - for now pretend this won&rsquo;t happen :)</span></p>
+    <p class="c0 c3"><span></span></p>
+    <p class="c0"><span class="c2">Note 2:</span><span>&nbsp; I&rsquo;m serious about you using C for Programs 1 and 2 -
+            you can&rsquo;t use C++ I/O!</span></p>
+    <p class="c0 c3"><span></span></p>
+    <p class="c0"><span>Each of the three programs are work 33.33% of your grade for this homework.</span></p>
+</body>
+
+</html>
